versioned_docs/version-2026.1.1/professor/douglas_barbosa_sousa.mdx
---
sidebar_label: 'Douglas Barbosa Sousa'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Douglas Barbosa Sousa",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Laboratório de Banco de Dados - 1238",
          "size": 2,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Projeto Integrador III - 1253",
          "size": 2,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "IIW2024A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "LABORATÓRIO DE BANCO DE DADOS (535)",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR III",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "a_definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LABORATÓRIO DE BANCO DE DADOS (535)",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR III",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "a_definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Administração de Sistemas Operacionais e Redes - 1236",
          "size": 4,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Douglas Barbosa Sousa

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

